# sier2-blocks-geo

./: .gitignore  LICENSE  README.rst  pyproject.toml
src/sier2_blocks_geo/blocks/: __init__.py  _geo.py  geo.py
src/sier2_blocks_geo/dags/: __init__.py  _dags.py  _geo_dags.py  geo_dags.py
src/sier2_blocks_geo/shelf/: __init__.py
