[project]
name = "sier2-blocks-geo"
version = "0.4"
description = "Geo blocks for sier2"
authors = [
    {name="jacobgolding", email="jacobgolding <jacobgolding@users.noreply.github.com>"}
]
readme = "README.rst"
packages = [{include = "sier2_blocks_geo", from = "src"}]
classifiers = [
    "Programming Language :: Python :: 3.11",
    "Operating System :: OS Independent",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development :: Libraries"
]

[dependencies]
python = "^3.11"
panel = ">=1.4.4"
param = ">=2.1.0"
sier2 = ">=0.30"
geoviews = ">=1.13"

[tool.poetry.plugins."sier2.library"]
export = "sier2_blocks_geo.shelf"

[[tool.mypy.overrides]]
module = [
    "sier2",
    "sier2-blocks",
    "holoviews",
    "param",
    "geoviews",
]
ignore_missing_imports = true

[build-system]
requires = ["poetry-core>=2.1.1"]
build-backend = "poetry.core.masonry.api"
